--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -18,8 +18,10 @@
 Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei costi sostenuti fino ad oggi e li confronta con i costi preventivati, in relazione agli obiettivi fissati.
 }
 
-\addversione{0.0.1}{22/04/2023}{Erica Cavaliere}{}{Stesura iniziale}
-\addversione{0.0.2}{24/04/2023}{Erica Cavaliere}{}{Correzzione errori e aggiunta delle intestazioni e dei piè di pagina}
+
+\addversione{0.0.1}{22/04/2023}{Erica Cavaliere}{Alberti Nicolas}{Stesura iniziale}
+\addversione{0.0.2}{24/04/2023}{Erica Cavaliere}{Soldà Matteo}{Correzione errori e aggiunta delle intestazioni e dei piè di pagina}
+\addversione{0.0.3}{26/04/2023}{Erica Cavaliere}{Brotto Romina}{Inserimento interruzioni di pagina e completamento grafico di Gantt}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -42,13 +44,13 @@ Per prefissare le scadenze bisognerà tenere conto del tempo impiegato per impar
 
 \subsection{Rischi organizzativi}
 Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi di organizzazione degli orari e quindi di non riuscire a rispettare la stima delle ore richiesta e, di conseguenza, sforare i costi indicati dal preventivo iniziale.
-
+\newpage
 \section{Pianificazione del lavoro}
 
 \paragraph{Grafico di Gantt}
 
 \includegraphics[scale=0.24]{grafico_gantt.png}
-
+\newpage
 \section{Preventivo delle ore e dei costi}
 
 \subsection{Suddivisione delle ore previste}
