--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -17,8 +17,8 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 }
 
 
-\addversione{0.0.0}{18/04/2023}{Lorenzo Salami}{Soldà Matteo}{Stesura iniziale.}
-\addversione{0.0.1}{24/04/2023}{Soldà Matteo}{}{Aggiunta delle intestazioni e dei piè di pagina}
+\addversione{0.0.0}{18/04/2023}{Salami Lorenzo}{Soldà Matteo}{Stesura iniziale.}
+\addversione{0.0.1}{24/04/2023}{Soldà Matteo}{Salami Lorenzo}{Aggiunta delle intestazioni e dei piè di pagina}
 
 
 \begin{document}
