Preparazione cartella public per consegna WoW

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -88,7 +88,7 @@ durante tutta la durata del progetto. Al suo interno comprende:
 \paragraph{\textit{Piano di Qualifica}}
 \\
 Al fine di produrre materiale di qualità, viene redatto il documento
-\textit{Piano di Qualifica}, che descrive le norme riguardanti la qualità dei prodotti e dei
+\textit{Piano di Qualifica}\textsubscript{\textit{G}}, che descrive le norme riguardanti la qualità dei prodotti e dei
 processi del gruppo. Al suo interno comprende:
 \begin{itemize}
     \item \textbf{Qualità di processo;}
@@ -109,14 +109,14 @@ i documenti precedentemente elencati:
     \item \textbf{Google Fogli:} è un software facente parte del gruppo di
     applicazioni Google, permette la realizzazione di fogli di calcolo in cui
     vengono effettuati i conteggi delle ore. 
-    \item \textbf{Online Gantt:} è un programma per realizzare i diagrammi di
-    Gantt.
+    \item \textbf{Online Gantt:} è un programma per realizzare i \textit{diagrammi di
+    Gantt}\textsubscript{\textit{G}}.
 \end{itemize}
 
 \subsubsection{Repository Pubblica}
 Durante lo sviluppo del progetto, il codice e la documentazione saranno depositati in una repository pubblica. La parte di interesse del proponente e del committente riguarda la cartella \textit{public}. \\
 La cartella sopra citata contiene la documentazione necessaria alle revisioni di periodo con il committente. Tale cartella rispecchia la struttura della cartella \textit{docs}, situata nella parte privata. \\
-I file che prevedono versionamento, riporteranno al loro interno la numerazione relativa alla versione attuale e un riassunto delle versioni precedenti. \\ 
+I file che prevedono \textit{versionamento\textsubscript{G}}, riporteranno al loro interno la numerazione relativa alla versione attuale e un riassunto delle versioni precedenti. \\ 
 Ogni modifica della parte pubblica deve essere approvata, tramite \textit{pull request}, dal responsabile.
 
 \subsubsection{Contatti}
@@ -241,7 +241,7 @@ Per ogni documento esisterà una nuova sottocartella omonima.
 \paragraph{}\\
 \textbf{Convenzioni di Nomenclatura File}
 \begin{itemize}
-    \item Un file che contiene l'interfaccia o l'implementazione di una sola ed esclusiva classe (ad eccezione di classi interne e sottoclassi) deve essere individuato nel seguente modo: \texttt{NomeClasse.estensione}.
+    \item Un file che contiene l'\textit{interfaccia \textsubscript{G}} o l'\textit{implementazione\textsubscript{G}} di una sola ed esclusiva classe (ad eccezione di classi interne e sottoclassi) deve essere individuato nel seguente modo: \texttt{NomeClasse.estensione}.
 \end{itemize}
 \paragraph{} \\
 \textbf{Convenzioni Stilistiche} \\
@@ -290,7 +290,7 @@ Per quanto riguarda la scrittura del codice, si è scelto di utilizzare le segue
 %        \item Metodi.
 %    \end{itemize}
 \begin{itemize}
-    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riga;
+    \item Un \textit{blocco\textsubscript{G}} di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riga;
     \item Si predilige l'uso della tabulazione per indentare la porzione di codice inclusa in un blocco.
 \paragraph{}\\
 \end{itemize}
