Aggiunto verbale interno del 26/04/2023

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -245,7 +245,7 @@ Per ogni documento esisterà una nuova sottocartella omonima.
 \end{itemize}
 \paragraph{} \\
 \textbf{Convenzioni Stilistiche} \\
-Per quanto riguarda la scrittura del codice, si è scelto di utilizzare le seguenti convenzioni, che saranno poi suddivise: \textit{camel case}, \textit{pascal case}, \textit{snake case}, \textit{lowercase} e \textit{screaming snake case}.\\ \\
+Per quanto riguarda la scrittura del codice, si è scelto di utilizzare le seguenti convenzioni, che verrano poi selezionate per l'uso a seconda dell'ambito e del linguaggio: \textit{camel case}, \textit{pascal case}, \textit{snake case}, \textit{lowercase} e \textit{screaming snake case}.\\ \\
 
 
 %\begin{table}[ht]
@@ -290,7 +290,7 @@ Per quanto riguarda la scrittura del codice, si è scelto di utilizzare le segue
 %        \item Metodi.
 %    \end{itemize}
 \begin{itemize}
-    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riga;
+    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riga, non seguita da caratteri ulteriori;
     \item Si predilige l'uso della tabulazione per indentare la porzione di codice inclusa in un blocco.
 \paragraph{}\\
 \end{itemize}
