Modifica e Verifica del Verbale del 02-05-2023

--- a/docs/interni/verbali/2023_05_02_I/2023_05_02_I.tex
+++ b/docs/interni/verbali/2023_05_02_I/2023_05_02_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 02/05/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Alberti Nicolas}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 02/05/2023
@@ -43,16 +43,19 @@
 
 \section*{Conclusioni}
 \indent Il gruppo si è riunito Martedì 02 Maggio, anziche di Lunedì come previsto dalle Norme di Progetto, in via del tutto eccezionale a causa della festività del 1 Maggio.\newline
-\indent Durante la riunione sono stati definiti i criteri di rotazione dei ruoli per ogni membro. Tale rotazione verrà tarata sulla base della competenza del singolo membro del gruppo. A tale scopo è stato introdotto un documento condiviso redatto con Google Fogli per il tracciamento delle ore.
+\indent Durante la riunione sono stati definiti i criteri di rotazione dei ruoli per ogni membro: tale rotazione verrà tarata sulla base della disponibilità del singolo membro del gruppo, cercando di mantenere equità tra i componenti. A tale scopo è stato introdotto un documento condiviso redatto con Google Fogli per il tracciamento delle ore.
 \newline
 \'E stato eseguito un test di prova del simulatore di lampadina fornito dall'Azienda.
 
-\indent \'E inoltre stata aperta la Board di Progetto per la gestione delle issues.
-Sono stati poi modificati i seguenti documenti:
-
+\indent \'E inoltre stata aperta la Board di Progetto per la gestione delle issues. 
+\newline
+\'E stata prevista la modifica dei seguenti documenti, in accordo con la Board di Progetto presente su GitHub Projects:
 \begin{itemize}
     \item Norme di Progetto: specifica della gestione e dell'uso della Project Board e delle issues.
 \end{itemize}
+
+
+
 
 
 \end{document}
