Aggiunte parole Ticket e Ticketing; commit intermedio, solo per salvare

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -13,7 +13,7 @@
 \setdescrizione{
 Questo documento riporta i termini specifici del dominio per i quali viene richiesta una definizione rigorosa e univoca.
 }
-
+\addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Cavaliere Erica}{Prima stesura.}
 
 
@@ -47,13 +47,27 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \textbf{Processo:} insieme di attività correlate e coese che trasformano bisogni (input) in prodotti (output) secondo regole date, utilizzando risorse nel farlo. \\ \\
 
 \newpage
+\section{T.}
+\textbf{Ticket:} è l'astrazione presente in GitHub Issues con cui si rappresenta
+un'attività di progetto: le attività sono solitamente atomiche e completabili in
+un periodo di tempo limitato. Ad ogni ticket si può associare o creare un branch
+nella repository del progetto.\\
+% TODO: Controllare se nelle Norme di Progetto sono presenti le parole "Branch" e "Repository".
+\textbf{Ticketing:} è il metodo con cui si rappresentano tutte le attività di
+progetto: è composto di più \textit{ticket\textsubscript{G}}, che permettono una visualizzazione rapida ed
+efficace di ogni incarico effettuato dai membri del gruppo. \\
+\newpage
 \section{V.}
 \textbf{Versionamento:} tracciamento di un determinato stato di un software nel tempo. \\
 
 \newpage
 \section{W.}
 \textbf{Way of Working:} rappresenta il come organizzare in maniera professionale le attività di progetto.\\ \\
-\textbf{Web Application:} indica generalmente tutte le applicazioni fruibili tramite il web.
+\textbf{Web Application:} indica generalmente tutte le applicazioni fruibili
+tramite il web.
+
+
+
 
 
 \end{document} 
