--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -23,7 +23,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.6}{24/04/2023}{Brotto Romina}{Soldà Matteo}{Risoluzione typo}
 \addversione{0.0.7}{25/04/2023}{Alberti Nicolas}{Soldà Matteo}{Modifica elementi TODO e TBD; introduzione Glossario v.0.0.0}
 \addversione{0.0.8}{26/04/2023}{Brotto Romina}{Alberti Nicolas}{Modifica elementi sezione 2.2.5}
-\addversione{0.0.9}{03/05/2023}{Alberti Nicolas}{}{Aggiunta sezione 4.1.1; modifica sezione 4.1}
+\addversione{0.0.9}{03/05/2023}{Alberti Nicolas}{Soldà Matteo}{Aggiunta sezione 4.1.1; modifica sezione 4.1}
 
 \begin{document}
 \makeindexdetails
