Piccole correzzioni in analisi dei requisiti

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -33,7 +33,7 @@ Questo documento si occupa di riportare un'analisi di tutti gli elementi richies
 \tableofcontents
 \newpage
 \clearpage
-\makecontentsdetails{Piano di Progetto} 
+\makecontentsdetails{Analisi dei requisiti} 
 
 \section{Introduzione}
 In questo progetto viene richiesto di creare un sistema che permetta di gestire i lampioni, accendendo una o più luci se sono presenti nelle vicinanze una o più persone o spegnendole altrimenti.\newline
@@ -157,7 +157,7 @@ Bisognerà che ci sia anche un modo per registrare i guasti degli impianti e seg
 \begin{enumerate}
     \item L'operatore ha l'accesso del sistema
     \item L'operatore seleziona il pulsante di Logout
-    \item L'applicazione cancella le credenziali con cui l'operatore aveva fatto l'accesso
+    \item L'applicazione termina la sessione dell'operatore
 \end{enumerate}
 
 \subsubsection{UC8 - Inserimento di nuovo impianto luminoso}
