Fixato typo; aggiunto revisore Verbale

--- a/docs/interni/verbali/2023_05_08_I/2023_05_08_I.tex
+++ b/docs/interni/verbali/2023_05_08_I/2023_05_08_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 08/05/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Alberti Nicolas}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 08/05/2023
@@ -48,7 +48,7 @@ Si è deciso che i diagrammi di Gantt da pubblicare sui \textit{Piano di Progett
     \item Matteo si occuperà della stesura del presente Verbale;
     \item Francesco e Matteo si occuperanno di preparare una versione preliminare di documento di confronto dei vari linguaggi che potrebbero essere utilizzati nel corso del progetto;
     \item Erica e Lorenzo si occuperanno di definire una sequenza chiara e univoca per la gestione dei commit e dei merge sulla repository;
-    \item Nicola e Romina si occuperanno di sistemare il documento \textit{Analisi dei Requisiti} con quanto definito mancante durante la riunione;
+    \item Nicolas e Romina si occuperanno di sistemare il documento \textit{Analisi dei Requisiti} con quanto definito mancante durante la riunione;
     \item Un membro del gruppo, in base alla disponibilità, si occuperà di stendere la presentazione \textit{Diario di Bordo del 2023/05/12} per poi inviarla al Prof. Vardanega;
     \item Si è inoltre deciso che, terminata la sistemazione dell'\textit{Analisi dei Requisiti}, si procederà a contattare il Sig. Patera di Imola Informatica per un confronto sugli \textit{use case} e sui requisiti del progetto;
 \end{itemize}
