Aggiunta requisiti funzionali

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -407,7 +407,20 @@ Ogni requisito è identificato da un codice così strutturato: R (per requisito)
     \textbf{Codice} & \textbf{Descrizione} & \textbf{Rilevanza} & \textbf{Fonti} \\
     \hline
     RFO01 & Rilevamento della presenza di individui in una delle aree illuminate. & Obbligatorio & UC1 \\
-    \end{tabular}
+    \hline
+    RFO02 & Inserimento di un nuovo sensore presente in un'area ma non ancora inserito per essere gestito dal sistema. & Obbligatorio & UC2 \\
+    \hline
+    RFO03 & Acquisizione dell'intensità luminosa e successiva determinazione precisa del livello di luminosità. & Obbligatorio & UC3 \\    
+    \hline
+    RFO04 & Una volta acquisito il livello di luminosità iniziale, l'operatore autenticato aumenta manualmente il livello di intesità luminosa. & Obbligatorio & UC4 \\    
+    \hline
+    RFO05 & Una volta acquisito il livello di luminosità iniziale, l'operatore autenticato diminuisce manualmente il livello di intesità luminosa. & Obbligatorio & UC5 \\    
+    \hline
+    RFO06 &  & Obbligatorio & UC6 \\    
+    
+
+
+\end{tabular}
 
 
 
