--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -522,7 +522,7 @@ Ogni requisito è identificato da un codice la cui struttura è definita nelle \
     RF17-O & Il sistema di gestione dell'illuminazione aumenta l'intensità
     luminosa al passaggio di una o più persone. & Obbligatorio & UC17 \\
     \hline
-    RF18-O & Il Il sistema di gestione dell'illuminazione diminuisce l'intensità
+    RF18-O & Il sistema di gestione dell'illuminazione diminuisce l'intensità
     luminosa al passaggio di una o più persone. & Obbligatorio & UC18 \\
     \hline
     RF19-O & Il gestore può impostare la modalità di funzionamento automatico
